feat: seed 파일 추가 및 시딩

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed/index.js"
   }
 }
