--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.7"
   },
   "type": "module",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js"
