--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "nodemon": "^3.1.7"
   },
   "type": "module",
-  "main": "app.js",
+  "main": "App.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon App.js",
+    "start": "node App.js"
   },
   "prisma": {
     "seed": "node prisma/seed/index.js"
