feat: 오늘의 습관 API 기능 추가 및 Render 배포 완료 (#6)
* chore: prisma 스키마에 Habit, CompleteHabit model 추가

* chore: prisma 마이그레이션

* chore: habit mock 데이터 추가

* chore: mock 데이터 수정

* feat: shcema.prisma 수정

* feat: seed 파일 추가 및 시딩

* feat: 에러 핸들러 함수 추가

* feat: 유효성 검증 추가

* feat: 컨트롤러 함수 추가 및 앱에 연결

* feat: http 추가

* package.json 파일 start 수정

* chore: package.json에서 App.js 파일명 수정

* feat: Prisma schema에 cascade 옵션 추가 및 시딩 수정

* chore: Prisma 마이그레이션 재적용

* chore: CORS 설정을 '*'로 변경하여 모든 도메인 허용

* feat: 습관 상태 수정 PATCH 추가

* feat: studyId optional field 설정

* feat: put 추가

* feat: 날짜순 정렬

* feat: prisma  스터디 이름추가 및 옵셔널 제거

* feat: studyId를 쿼리로 사용하는 습관 상태 수정 업데이트

---------

Co-authored-by: alscksdlek <mseon916@naver.com>

--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "nodemon": "^3.1.7"
   },
   "type": "module",
+  "main": "App.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon App.js",
+    "start": "node App.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed/index.js"
   }
 }
