--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "express": "^4.21.0",
     "is-email": "^1.0.2",
     "is-uuid": "^1.0.2",
-    "prisma": "^5.20.0",
     "superstruct": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prisma": "^5.20.0"
   },
   "type": "module",
   "main": "App.js",
